2006-05-02  Dave Korn  <dave.korn@artimi.com>

	* binutils-all/copy-1.d (name):  Correct spelling of 'setting'.
	* binutils-all/copy-1.d (name):  Likewise.

2006-05-02  Nick Clifton  <nickc@redhat.com>

	* binutils-all/copy-2.d: Change the name of the section whose
	flags are changed to "foo" so that the test will work with PE
	based targets.  Skip this test for AOUT based targeted.
	* binutils-all/copytest.s: New file.

2006-05-01  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/objcopy.exp: Run "copy-1" for ELF only.

2006-05-01  Ben Elliston  <bje@au.ibm.com>

	* binutils-all/objcopy.exp (objcopy_test_readelf): Remove stray ;

2006-04-26  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/2593
	* binutils-all/copy-1.d: New file.
	* binutils-all/copy-1.s: Likewise.
	* binutils-all/copy-2.d: Likewise.

	* binutils-all/objcopy.exp: Add run_dump_test "copy-1" and
	run_dump_test "copy-2".

	* lib/utils-lib.exp (run_dump_test): New.
	(slurp_options): Likewise.
	(regexp_diff): Likewise.
	(file_contents): Likewise.
	(verbose_eval): Likewise.

2006-04-25  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/2467
	* binutils-all/objcopy.exp (strip_test): Also test "strip -g"
	on archive.

2006-04-10  H.J. Lu  <hongjiu.lu@intel.com>

	* lib/utils-lib.exp (default_binutils_run): Check exit status.

2005-12-24  Ben Elliston  <bje@gnu.org>

	* config/default.exp: Do not load the unneeded util-defs.exp.

2005-11-15  Jan Beulich  <jbeulich@novell.com>

	* config/default.exp (link_or_copy): New. Use it for setting
	up assembler and linker for the compiler to use.

2005-10-20  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/251
	* binutils-all/group.s: New file.

	* binutils-all/objcopy.exp (objcopy_test_readelf): New
	procedure.
	Use it to test ELF group.

2005-10-19  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/1487
	* binutils-all/objcopy.exp (objcopy_test): New procedure.
	Use it to test simple copy, ia64 link order and ELF unknown
	section type.

	* binutils-all/unknown.s: New file.
