@@ -727,3 +727,4 @@ if [is_elf_format] {
 }
 
 run_dump_test "copy-2"
+run_dump_test "copy-3"
