@@ -1,3 +1,9 @@
+2006-05-03  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* binutils-all/copy-3.d: New.
+
+	* objcopy.exp: Run copy-3.
+
 2006-05-02  Dave Korn  <dave.korn@artimi.com>
 
 	* binutils-all/copy-1.d (name):  Correct spelling of 'setting'.
